--- a/_data/code/municipal/edmonton_ab.yml
+++ b/_data/code/municipal/edmonton_ab.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 adminCode: edmonton_ab
 releases: 
   - 
@@ -6,6 +7,7 @@ releases:
       URL: https://github.com/yeg-relief/youcanbenefit/issues
     date: 
       created: "2016-06-16"
+      metadataLastUpdated: "2019-01-29"
     description: 
       en: "YouCanBenefit is a web application that increases social benefit program discoverability for people of lesser means and their allies."
       fr: "YouCanBenefit est une application Web qui augmente la découvrabilité des programmes d'avantages sociaux pour les personnes moins fortunées et leurs alliés."
@@ -14,12 +16,12 @@ releases:
     name: 
       en: YouCanBenefit
       fr: YouCanBenefit
-    permissions: 
-      licenses: 
-        - 
-          URL: 
-            en: "https://github.com/yeg-relief/youcanbenefit/blob/master/LICENSE"
-          name: "MIT"
+    licenses: 
+      - 
+        URL: 
+          en: "https://github.com/yeg-relief/youcanbenefit/blob/master/LICENSE"
+          fr: "https://github.com/yeg-relief/youcanbenefit/blob/master/LICENSE"
+        spdxID: "MIT"
     repositoryURL: 
       en: "https://github.com/yeg-relief/youcanbenefit"
       fr: "https://github.com/yeg-relief/youcanbenefit"
