--- a/_data/code/municipal/mtl_qc.yml
+++ b/_data/code/municipal/mtl_qc.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 adminCode: mtl_qc
 releases: 
   - 
@@ -6,6 +7,7 @@ releases:
       URL: https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues
     date: 
       created: "2014-02-14"
+      metadataLastUpdated: "2019-01-29"
     description: 
       en: "City of Montreal CKAN Extension"
       fr: "Extension CKAN de la ville de Montréal"
@@ -14,17 +16,20 @@ releases:
     name: 
       en: CKAN-Extension-Territoire
       fr: CKAN-Extension-Territoire
-    permissions: 
-      licenses: 
-        - 
-          URL: 
-            en: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-en.txt"
-            fr: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-fr.txt"
-          name: "MIT"
+    licenses: 
+      - 
+        URL: 
+          en: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-en.txt"
+          fr: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-fr.txt"
+        spdxID: "MIT"
     relatedCode: 
       - 
-        URL: "https://github.com/ckan/ckan"
-        name: CKAN
+        URL: 
+          en: "https://github.com/ckan/ckan"
+          fr: "https://github.com/ckan/ckan"
+        name: 
+          en: CKAN
+          fr: CKAN
     repositoryURL: 
       en: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire"
       fr: "https://github.com/VilledeMontreal/CKAN-Extension-Territoire"
