--- a/_data/code/provincial/bc.yml
+++ b/_data/code/provincial/bc.yml
@@ -1,4 +1,5 @@
 --- 
+schemaVersion: "1.0"
 adminCode: bc
 releases: 
   - 
@@ -7,6 +8,7 @@ releases:
       email: bcdevexchange@gov.bc.ca
     date: 
       created: "2016-10-23"
+      metadataLastUpdated: "2019-01-29"
     description: 
       en: "B.C. Developer Exchange Application"
       fr: "Application Échange de développeurs C.-B."
@@ -15,13 +17,12 @@ releases:
     name: 
       en: Devex
       fr: Devex
-    permissions: 
-      licenses: 
-        - 
-          URL: 
-            en: "https://github.com/BCDevExchange/devex/blob/develop/LICENSE"
-            fr: "https://github.com/BCDevExchange/devex/blob/develop/LICENSE"
-          name: "Apache-2.0"
+    licenses: 
+      - 
+        URL: 
+          en: "https://github.com/BCDevExchange/devex/blob/develop/LICENSE"
+          fr: "https://github.com/BCDevExchange/devex/blob/develop/LICENSE"
+        spdxID: "Apache-2.0"
     repositoryURL: 
       en: "https://github.com/BCDevExchange/devex"
       fr: "https://github.com/BCDevExchange/devex"
