--- a/_data/code/federal/cse-cst.yml
+++ b/_data/code/federal/cse-cst.yml
@@ -4,7 +4,9 @@ adminCode: cse-cst
 releases: 
   - 
     contact: 
-      URL: https://github.com/CommunicationsSecurityEstablishment/spartacus/issues
+      URL: 
+        en: https://github.com/CommunicationsSecurityEstablishment/spartacus/issues
+        fr: https://github.com/CommunicationsSecurityEstablishment/spartacus/issues
     date: 
       created: "2016-02-28"
       metadataLastUpdated: "2019-01-31"
