--- a/_data/logiciels_libres-open_source_software/mediawiki.yml
+++ b/_data/logiciels_libres-open_source_software/mediawiki.yml
@@ -76,7 +76,7 @@ admininstrations:
           en: "APM data"
           fr: "Données du APM"
   - 
-    adminCode: statscan
+    adminCode: statcan
     uses: 
       - 
         contact: 
