--- a/_data/code/federal/esdc-edsc.yml
+++ b/_data/code/federal/esdc-edsc.yml
@@ -7,7 +7,7 @@ releases:
       email: "calvin.rodo@hrsdc-rhdcc.gc.ca"
     date:
       created: "2019-02-13"
-      metadataLastUpdated: "2019-02-13"
+      metadataLastUpdated: "2019-02-21"
     description:
       en: "A dashboard to show expose metrics on software projects at ESDC"
       fr: "Un tableau de bord pour afficher les métriques d'exposition sur les projets logiciels d'EDSC"
@@ -25,17 +25,15 @@ releases:
       fr: "https://github.com/esdc-devx/AppHub"
     tags:
       en:
-        - "dashboard"
-        - "devx"
+        - "Dashboard"
       fr:
-        - "tableau de bord"
-        - "devx"
+        - "Tableau de bord"
   -
     contact:
       email: "calvin.rodo@hrsdc-rhdcc.gc.ca"
     date:
       created: "2019-02-13"
-      metadataLastUpdated: "2019-02-13"
+      metadataLastUpdated: "2019-02-21"
     description:
       en: "A .Net test app for the Code Coverage reporting dashboard"
       fr: "Une application de test .Net pour le tableau de bord de rapports de couverture de code"
@@ -53,8 +51,6 @@ releases:
       fr: "https://github.com/esdc-devx/DotNetCCDemo"
     tags:
       en:
-        - "demo"
-        - "devx"
+        - "Demo"
       fr:
-        - "demo"
-        - "devx"
+        - "Demo"
