--- a/_data/code/federal/tbs-sct.yml
+++ b/_data/code/federal/tbs-sct.yml
@@ -308,3 +308,31 @@ releases:
       fr: 
         - "Extension CKAN"
     vcs: git
+  - 
+    contact: 
+      email: "sebastien.lemay@canada.ca"
+    date: 
+      created: "2017-12-31"
+      metadataLastUpdated: "2019-03-06"  
+    description: 
+      en: "This Website and all the data."
+      fr: "Ce site Web et toutes les données."
+    name: 
+      en: "Open Resource Exchange"
+      fr: "Échange de Ressource Ouvert"
+    licenses:
+      - 
+        URL: 
+          en: "https://github.com/canada-ca/ore-ero/blob/master/LICENSE.txt"
+          fr: "https://github.com/canada-ca/ore-ero/blob/master/LICENSE.txt"
+        spdxID: "MIT"
+    repositoryURL: 
+      en: "https://github.com/canada-ca/ore-ero"
+      fr: "https://github.com/canada-ca/ore-ero"
+    tags: 
+      en: 
+        - "Website"
+        - "Data"
+      fr: 
+        - "Site Web"
+        - "Données"
