update the status values in the code schema

--- a/_config.yml
+++ b/_config.yml
@@ -189,8 +189,8 @@ NameRelatedCodeDesc:
   en: English and French name of the software used in this project.
   fr: Le nom anglais et français du logiciel utilisé dans cette "release".
 StatusCodeDesc:
-  en: The development status of the project. For example, Production, Beta, ..
-  fr: Le statut de développement de la version. Par exemple, Production, Beta, ..
+  en: The development status of the project. For example, Alpha, Beta, Maintained, deprecated, retired
+  fr: Le statut de développement de la version. Par exemple, Alpha, Beta, Maintained, deprecated, retired
 TagsCodeDesc:
   en: English and French keywords that will be helpful in discovering and searching for the project.
   fr: Un ensemble de mots clés qui seront utiles pour la decouverte et la recherche de la "release".
