Add Montréal as a partner for ORE

--- a/_data/code/federal/tbs-sct.yml
+++ b/_data/code/federal/tbs-sct.yml
@@ -326,6 +326,11 @@ releases:
           en: "https://github.com/canada-ca/ore-ero/blob/master/LICENSE.txt"
           fr: "https://github.com/canada-ca/ore-ero/blob/master/LICENSE.txt"
         spdxID: "MIT"
+    partners:
+      email: "renatabianca.tomazeli@ville.montreal.qc.ca"
+      name: 
+        en: "City of Montreal" 
+        fr: "Ville de Montréal"
     repositoryURL: 
       en: "https://github.com/canada-ca/ore-ero"
       fr: "https://github.com/canada-ca/ore-ero"
