add a translation for openSourceCode

--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,9 @@ Search:
 TopicsMenu:
   en: Topics menu
   fr: Menu des sujets
+OpenSourceCode:
+  en: Open Source Code
+  fr: Code source ouvert
 FilterOptions:
   en: Filter Options
   fr: Options de filtrage
