--- a/_config.yml
+++ b/_config.yml
@@ -190,7 +190,7 @@ NameRelatedCodeDesc:
   fr: Le nom anglais et français du logiciel utilisé dans cette "release".
 StatusCodeDesc:
   en: The development status of the project. For example, Alpha, Beta, Maintained, deprecated, retired
-  fr: Le statut de développement de la version. Par exemple, Alpha, Beta, Maintained, deprecated, retired
+  fr: Le statut de développement de la version. Par exemple, Alpha, Beta, Maintenu, Déprécié, Retraité
 TagsCodeDesc:
   en: English and French keywords that will be helpful in discovering and searching for the project.
   fr: Un ensemble de mots clés qui seront utiles pour la decouverte et la recherche de la "release".
@@ -230,7 +230,15 @@ StatusCodeForm:
 VcsCodeForm:
   en: Name of the version control system used in this project
   fr: Nom du système de contrôle de version utilisé dans ce projet
-
+MaitainedStatus:
+  en: Maintained
+  fr: Maintenu
+DeprecatedStatus:
+  en: Deprecated
+  fr: Déprécié
+RetiredStatus:
+  en: Retired
+  fr: Retraité
 
 # Build settings
 markdown: kramdown
