Remove Canada.ca Search

--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,8 @@ GoC:
   en: Government of Canada
   fr: Gouvernement du Canada
 SearchAndMenus:
-  en: Search and menus
-  fr: Recherche et menus
+  en: Menus
+  fr: Menus
 SearchWebsite:
   en: Search website
   fr: Recherchez le site Web
