--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
 language: ruby
 rvm:
-  - 2.6.0
+- 2.6.0
 
-script: jekyll build  &&  htmlproofer --check_html --disable-external --allow-hash-href ./_site
+jdk:
+- oraclejdk8 
+
+install:
+- bundle install 
+- pip install --user html5validator
+
+script: 
+- bundle exec jekyll build 
+- htmlproofer --disable-external --allow-hash-href ./_site
+- html5validator --root _site/
 
 sudo: false
